fix footer on mobile

--- a/src/app/components/landing/Footer.c.scss
+++ b/src/app/components/landing/Footer.c.scss
@@ -44,6 +44,7 @@
   margin-right: 10px;
   margin-left: 10px;
   max-width: 50%;
+  margin-bottom: 20px;
 }
 
 .base {
